Prevent text from overflowing for the employee description
MIMIR-1594

--- a/src/main/resources/assets/styles/_employee.scss
+++ b/src/main/resources/assets/styles/_employee.scss
@@ -123,6 +123,7 @@
       div {
         display: flex;
         flex-wrap: wrap;
+        word-break: break-word;
 
         p {
           font-size: 20px;
